# texteditor_rlib

./: Action.cpp  CMakeLists.txt  Config.cpp  README.md  TextEdit.hpp  window.hpp
include/: Action.hpp  Config.hpp  Dialog.hpp  Interface.hpp  TextState.hpp
src/: Dialog.cpp  TextEdit.cpp  main.cpp
